# Claude-Root

./: .gitignore  .mcp.json  .speckit-version  CLAUDE.md  CLAUDE.md.jinja  README.md  copier.yml  roadmap.md  setup.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md  consistency-auditor.md  delivery-reviewer.md  devils-advocate.md  operational-reviewer.md  product-strategist.md  provocateur.md  security-reviewer.md  synthesis-judge.md  systems-architect.md  technologist.md  user-advocate.md  visionary.md
.claude/commands/: colin-setup.md  speckit.analyze.md  speckit.audit.md  speckit.brainstorm.md  speckit.branching.md  speckit.checklist.md  speckit.clarify.md  speckit.codereview.md  speckit.constitution.md  speckit.implement.md  speckit.init.md  speckit.plan.md  speckit.retro.md  speckit.review-profile.md  speckit.review.md  speckit.run.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.claude/rules/: agents.md  branching.md  conventions.md  memory-convention.md  workflow.md
.specify/contracts/: decision-log-entry.md
docs/: research-superpowers-integration.md  speckit-optimization-recommendations.md
memory-server/: pyproject.toml
memory-server/speckit_memory/: index.py  server.py  sync.py
memory-server/tests/: conftest.py
memory-server/tests/contract/: test_tools.py
memory-server/tests/integration/: test_fault_scenarios.py  test_sync.py
memory-server/tests/unit/: test_chunker.py  test_filter_predicate.py  test_index.py  test_server_errors.py  test_staleness.py  test_sync.py
setup/global/: CLAUDE.md  (+2 more)
tests/: README.md
(+247 files in other folders)
