[project]
name = "speckit-memory"
version = "0.1.0"
description = "MCP server for semantic memory over speckit decision records"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "lancedb>=0.13",
    "ollama>=0.4",
    "httpx>=0.27",
    "pyarrow>=15.0",
]

[project.scripts]
speckit-memory = "speckit_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speckit_memory"]

[dependency-groups]
dev = [
    "pandas>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live Ollama process (deselect with -m 'not integration')",
]
